--- a/style.css
+++ b/style.css
@@ -55,3 +55,103 @@
    color: #fff;
    font-size: 32px;
 }
+.carousel .carousel-inner {
+   /* height: 90vh; */
+}
+.courses h3 {
+   font-size: 1rem;
+   color: #6cc118;
+}
+.courses h2 {
+   font-size: 30px;
+   color: #6cc118;
+   line-height: 0.5;
+}
+.courses h2 span {
+   color: #254a74;
+}
+.container a {
+   text-decoration: none;
+   background-color: transparent;
+}
+.card-body .card-title {
+   font-size: 17px;
+   color: #000;
+   font-weight: 600;
+}
+.card-body .time,
+.hours {
+   font-size: 1rem;
+   color: gray;
+}
+.card-body .bi {
+   font-size: 1rem;
+   color: #6cc118;
+   padding-right: 6px;
+}
+.card-body .btn {
+   border: none;
+   background-color: #6cc118;
+}
+.about-section {
+   background-color: #fbfff4;
+}
+.about-section img {
+   width: 90%;
+}
+.center-box {
+   width: 90%;
+
+   border: 1px solid green;
+}
+/* .footer{
+   background-color: #0551AC;
+   color: #fff;
+}
+.footer img{
+   width: 50%;
+} */
+
+/* footer section  */
+.footer {
+   background-color: #0551ac;
+   padding-top: 32px;
+   padding-bottom: 16px;
+}
+.footer .footer-logo {
+   width: 144px;
+   height: 108px;
+   padding: 8px 12px;
+}
+.footer .footer-icon {
+   width: 32px;
+   height: 32px;
+   border: 1px solid #fff;
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.footer .footer-icon a {
+   text-decoration: none;
+   color: #fff;
+}
+.footer .footer-icon:hover {
+   background-color: #6cc118;
+}
+.footer .footer-heading {
+   color: #fff;
+   font-size: 1.25rem;
+}
+.footer .nav-item .nav-link {
+   color: #fff;
+   font-size: 1rem;
+}
+.footer .nav-item .nav-link:hover {
+   color: #6cc118;
+}
+.footer .collaboration{
+   margin-top: 16px;
+   border-radius: 4px;
+
+}
