--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
    margin: 0;
    box-sizing: border-box;
 }
+
 .header {
    background-color: #e5e7eb;
    font-size: 1rem;
@@ -55,60 +56,86 @@
    color: #fff;
    font-size: 32px;
 }
-.courses h3 {
-   font-size: 1rem;
+.section-header h6 {
    color: #6cc118;
+   font-size: 1rem;
+   font-weight: bold;
 }
-.courses h2 {
-   font-size: 30px;
+.section-header h2 {
    color: #6cc118;
-   line-height: 0.5;
+   font-weight: bold;
+   font-size: 1.875rem;
+   line-height: 0.8;
 }
-.courses h2 span {
-   color: #254a74;
+/* main section  */
+.courses-section {
+   padding: 32px 0;
 }
-.container a {
-   text-decoration: none;
-   background-color: transparent;
+.courses-section .container {
+   padding: 32px;
 }
-.card-body .card-title {
-   font-size: 17px;
-   color: #000;
-   font-weight: 600;
-}
-.card-body .time,
-.hours {
+
+.courses-section .card .course-name {
    font-size: 1rem;
-   color: gray;
+   color: #111;
 }
-.card-body .bi {
-   font-size: 1rem;
+
+.courses-section .card .date-time {
+   display: flex;
+   flex-direction: column;
+}
+
+.courses-section .card .date-time .date,
+.time {
+   color: #6b7280;
+   font-size: 14px;
+}
+.courses-section .card .date-time .bi {
    color: #6cc118;
    padding-right: 6px;
 }
-.card-body .btn {
-   border: none;
-   background-color: #6cc118;
+.courses-section .card .card-footer .tk {
+   color: #0551ac;
+   font-size: 1rem;
+   font-weight: 500;
 }
-.about-section {
-   background-color: #fbfff4;
-}
-.about-section img {
-   width: 90%;
-}
-.center-box {
-   width: 90%;
-
-   border: 1px solid green;
-}
-/* .footer{
-   background-color: #0551AC;
+.courses-section .card .card-footer .btn {
+   background-color: #0551ac;
    color: #fff;
+   font-size: 1rem;
 }
-.footer img{
-   width: 50%;
-} */
 
+/* about section  */
+.about {
+   background-color: #fafef1;
+   padding: 48px 0;
+}
+.about .container {
+   padding: 32px;
+}
+.about .about-img-section {
+   width: 571px;
+   height: 321px;
+   border-radius: 5px;
+}
+.about .about-paragraph {
+   color: rgb(31 41 55);
+   font-size: 1rem;
+   font-weight: 500;
+   text-align: justify;
+   letter-spacing: 0.4px;
+   padding: 16px 0;
+}
+.about .know-more .btn {
+   background-color: #6cc118;
+   font-size: 1rem;
+   color: #fff;
+   border: 1px solid #6cc118;
+   padding: 4px 20px;
+}
+.about .know-more .btn:hover {
+   background-color: #5ea714;
+}
 /* footer section  */
 .footer {
    background-color: #0551ac;
@@ -149,5 +176,5 @@
 }
 .footer .collaboration {
    margin-top: 16px;
-   border-radius: 4px;
+   border-radius: 3px;
 }
