--- a/style.css
+++ b/style.css
@@ -104,11 +104,11 @@
    color: #fff;
    font-size: 1rem;
 }
-.courses-section .card{
-   transition: transform .5s;
+.courses-section .card {
+   transition: transform 0.5s;
 }
-.courses-section .card:hover{
-   transform:scale(1.10);
+.courses-section .card:hover {
+   transform: scale(1.1);
    cursor: pointer;
    /* border: 2px solid #6cc118; */
 }
@@ -125,7 +125,6 @@
    height: 321px;
    border-radius: 12px;
    padding: 8px 0;
-
 }
 .about .about-paragraph {
    color: rgb(31 41 55);
@@ -145,12 +144,12 @@
 .about .know-more .btn:hover {
    background-color: #5ea714;
 }
-.about .card{
+.about .card {
    border-right: 4px solid #6cc118;
-   transition: transform .5s;
+   transition: transform 0.5s;
 }
-.about .card:hover{
-   transform:scale(1.10);
+.about .card:hover {
+   transform: scale(1.1);
    cursor: pointer;
 }
 /* footer section  */
@@ -194,4 +193,13 @@
 .footer .collaboration {
    margin-top: 16px;
    border-radius: 3px;
+}
+
+
+.page-title{
+   padding: 16px 0;
+   text-align: center;
+   font-size: 20px;
+   color: #6cc118;
+   font-weight: 500;
 }
